# Agents-with-Microsoft-Autogen

./: autogen_backend.py  custom_function_tools.py  human-in-the-loop-after-run.py  human-in-the-loop.py  in_built_tools.py  main.py  pyproject.toml  requirements.txt  streamlit_app.py
Jupyter Notebooks/: 1_AgentChat_First_Agent.ipynb  2_Agents_in_Autogen.ipynb  3_Multimodal_Capabilities_of_Autogen.ipynb  4_MultiAgent_Teams_in_Autogen.ipynb  5_Selector_Group_Chat.ipynb
