[project]
name = "autogen-crash-course"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncio>=4.0.0",
    "autogen-agentchat>=0.7.5",
    "autogen-core>=0.7.5",
    "autogen-ext[http-tool,langchain]>=0.7.5",
    "autogenstudio==0.4.2.2",
    "dotenv>=0.9.9",
    "openai>=2.12.0",
    "pydantic>=2.12.5",
    "tiktoken>=0.12.0",
]
